--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Leandro Thiery",
   "license": "MIT",
   "dependencies": {
+    "@azure/cognitiveservices-computervision": "^8.1.0",
+    "async": "^3.2.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "express": "^4.17.1",
